--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,7 @@
 grafana:
-  domain: your-domain
-  tls: true  # true/false
+  public_url: https://your-grafana.com
   token: your-token
 loglevel: INFO
-expiry_days: 7
+files:
+  expiry_days: 7
+  public_url: https://your-domian.com
