--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,11 @@
 grafana:
+  # 程序自身可访问的 grafna 地址，可以使用内网地址，只要本程序可以访问即可
   public_url: https://your-grafana.com
+  # 在 Grafana 后台中创建一个服务账户，即可获得 token
   token: your-token
-loglevel: INFO
 files:
-  expiry_days: 7
-  public_url: https://your-domian.com
+  # 本程序中 web 服务的访问地址，目前必须是公网可访问地址，否则否则某些只能
+  # 从网络URL发送文件的推送器将无法下载到图片或文件。
+  public_url: https://example.com
+  # 产生的临时文件保存天数
+  expiry_days: 2
