--- a/config/job.yaml
+++ b/config/job.yaml
@@ -1,49 +1,35 @@
-# notifier 是一个示例，向你展示支持的发送程序如何配置
-# 你也可以在这里写上配置，使用 yaml 锚点和引用的语法，
-# 为常用的配置添加锚点，并在 job 中重复引用。
-notifier:
-  - &boss
-    type: dingtalk_webhook
-    config:
-      webhook: example1.com
-  - &team
-    type: worktool
-    config:
-      robotid: your-robotid
+# 请参考 readme.md
+
+x-render-config: &render-cfg
+  width: 792
+  filetype: png
+
+jobs:
+  - name: example-job1
+    page:
+      dashboard_uid: xxxxxxx1
+      panel_uid:
+      query: var-subject=testteam&kiosk
+    render:
+      width: 792
+      filetype: png       
+    crontab: 0 0 * * *
+    notifier:
+      type: Worktool
       receiver:
-        - chatgroup
-        - Tom
+        - 杰哥
+        - 产品测试群
 
-job:
-    - name:  # 人类可读命名，没有其他用途
-      dashboard:
-        - uid:    # dashboard uid
-          query:  # 查询变量，例如 var-season=春天&var-status=All
-          width:  # 宽度，对 png 和 pdf 生效
-          type:   # 可选 png pdf
-      panel:
-        - dash_uid:    # dashboard uid
-          uid:         # panel uid
-          width:       # 宽度，对 png 和 pdf 生效
-          type:        # 可选 png pdf csv xlsx
-      cron:
-        month:
-      notifier: *boss
-
-    - name:  # 人类可读命名，没有其他用途
-      dashboard:
-        - uid:    # dashboard uid
-          query:  # 查询变量，例如 var-season=春天&var-status=All
-          width:  # 宽度，对 png 和 pdf 生效
-          type:   # 可选 png pdf
-      panel:
-        - dash_uid:    # dashboard uid
-          uid:         # panel uid
-          width:       # 宽度，对 png 和 pdf 生效
-          type:        # 可选 png pdf csv xlsx
-      schedule:
-        every:    # 参考 Readme.md
-        at_time:
-        at_week:
-      notifier: *team
-
+  - name: example-job2
+    page:
+      dashboard_uid: xxxxxxx2
+      panel_uid: 1
+      query:
+    render:
+      <<: *render-cfg
+    crontab: 0 0 * * *
+    notifier:
+      type: DingTalkWebhook
+      receiver:
+        - 杰哥
+        - 产品测试群
