--- a/config.example/job.yaml
+++ b/config.example/job.yaml
@@ -4,7 +4,7 @@ x-render-config: &render-cfg
   width: 792
   filetype: png
 
-jobs:
+grafana:
   - name: example-job1
     page:
       dashboard_uid: xxxxxxx1
