增加脚本任务，便于使用脚本生产报告

--- a/config.example/job.yaml
+++ b/config.example/job.yaml
@@ -33,3 +33,13 @@ grafana:
       receiver:
         - 杰哥
         - 产品测试群
+
+script:
+  - name: test-script
+    scriptfile: dayreport.py
+    crontab: 0 0 * * *
+    notifier:
+      type: DingTalkWebhook
+      receiver:
+        - 杰哥
+        - 产品测试群
